second page update

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                         </li>
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
+                            <a class="nav-link" href="/statistics/statistics.html">Why Sex Ed?</a>
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                            <a class="nav-link" href="/learn-more/learn-more.html">Safe Practices</a>
                         </li>
                     </ul>
                 </div>
