--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -22,11 +22,11 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../landing-page/index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
+                            <a class="nav-link" href="./statistics/statistics.html">Why Sex Ed?</a>
 
                         </li>
                         <li class="nav-item">
