put the image links down

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p>Comprehensive sexuality education should recognize the unique needs of learners, especially vulnerable youth groups – such as LGBTQ+ youth, youth living with disabilities, young people in humanitarian settings, young people who use drugs, young people living with HIV, and young transgender people – and should be tailored to reflect their realities. - <a id="unfpa" href="https://www.unfpa.org/comprehensive-sexuality-education#readmore-expand" target="_blank">unfpa.org</a></p>
             </div>
             <div class="col-6 landing-row-1-col-1">
-                <img src="./Lesbian couple-pana.png" class="photo-one"></img>
+                <img src="./landing-page/Lesbian couple-pana.png" class="photo-one"></img>
             </div>
         </section>
 
@@ -78,7 +78,7 @@
                     sense of responsibility, and positive attitude toward their sexual and reproductive health</p>
             </div>
             <div class="col-5 image-2-container">
-                <img src="./Group-cuate.png" class="photo-two"></img>
+                <img src="./landing-page/Group-cuate.png" class="photo-two"></img>
             </div>
 
         </section>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="col photo-resource-container">
-                <img src="./Contraception methods-pana.png" class="photo-resource"></img>
+                <img src="./landing-page/Contraception methods-pana.png" class="photo-resource"></img>
             </div>
 
         </section>
