--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-<head>  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../utilities.css" type="text/css" />
+<head>
+
+    <link rel="stylesheet" href="utilities.css" type="text/css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Health and Wellness</title>
+    <title>Comprehensive Sex</title>
     <script src="https://kit.fontawesome.com/21b584a66f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="stylesheet" href="./landing-page/styles.css" type="text/css" />
 </head>
 
 <body>
@@ -27,15 +27,15 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../landing-page/index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href=".">Home</a>
                         </li>
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
+                            <a class="nav-link" href="./statistics/statistics.html">Why Sex Ed?</a>
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../learn-more/learn-more.html">Safe Practices</a>
+                            <a class="nav-link" href="./learn-more/learn-more.html">Safe Practices</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +53,7 @@
     <main class="container-fluid">
 
 
-        <section class="row landing-mission-statement animate__animated animate__fadeInDown">
+        <section class="row landing-mission-statement">
             <div class="col-12">
                 <h5>Comprehensive sexuality education enables young people to protect and advocate for their health, well-being and dignity by providing them with a necessary toolkit of knowledge, attitudes and skills.</h5>
             </div>
@@ -62,23 +62,23 @@
 
         <section class="row landing-row-1">
 
-            <div class="col-6 landing-row-1-col-2 animate__animated animate__fadeInDown">
+            <div class="col-6 landing-row-1-col-2">
                 <p>Comprehensive sexuality education should recognize the unique needs of learners, especially vulnerable youth groups – such as LGBTQ+ youth, youth living with disabilities, young people in humanitarian settings, young people who use drugs, young people living with HIV, and young transgender people – and should be tailored to reflect their realities. - <a id="unfpa" href="https://www.unfpa.org/comprehensive-sexuality-education#readmore-expand" target="_blank">unfpa.org</a></p>
             </div>
-            <div class="col-6 landing-row-1-col-1 ">
-                <img src="./Lesbian couple-pana.png" class="photo-one"></img>
+            <div class="col-6 landing-row-1-col-1">
+                <img src="./landing-page/Lesbian couple-pana.png" class="photo-one"></img>
             </div>
         </section>
 
 
         <section class="row landing-row-2">
-            <div class="col-5 landing-row-2-col-2 animate__animated animate__fadeInDown">
+            <div class="col-5 landing-row-2-col-2">
                 <p>Comprehensive sex education must nurture positive attitudes and values, including open-mindedness, respect for
                     self and others, positive self-worth/esteem, comfort, nonjudgmental attitude,
                     sense of responsibility, and positive attitude toward their sexual and reproductive health</p>
             </div>
             <div class="col-5 image-2-container">
-                <img src="./Group-cuate.png" class="photo-two"></img>
+                <img src="./landing-page/Group-cuate.png" class="photo-two"></img>
             </div>
 
         </section>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="col photo-resource-container">
-                <img src="./Contraception methods-pana.png" class="photo-resource"></img>
+                <img src="./landing-page/Contraception methods-pana.png" class="photo-resource"></img>
             </div>
 
         </section>
