saving progress on aspect ratio

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -42,8 +42,8 @@
             <h1>Why is Sex-Ed Important?</h1>
         </section>
 
-        <section class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/re3x5vXMSX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <section class=" style=--bs-aspect-ratio: 50%; "style= "max-width: 500px; max-height: 500px;">
+            <iframe src="https://www.youtube.com/embed/re3x5vXMSX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="lower-three justify-content-center h-100 g-0">
             <section class="row row-one ">
