fixed the video i was trouble with when i was expermineting aspect ratio

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -42,15 +42,16 @@
             <h1>Why is Sex-Ed Important?</h1>
         </section>
 
-        <section class=" style=--bs-aspect-ratio: 50%; "style= "max-width: 500px; max-height: 500px;">
-            <iframe src="https://www.youtube.com/embed/re3x5vXMSX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <section class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/re3x5vXMSX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
+
+
         <section class="lower-three justify-content-center h-100 g-0">
             <section class="row row-one ">
                 <div class="col-8 row-text">
                     <h2> Reproductive Health Rights</h2>
                     <p> Reproductive rights would be always be discussed in Comprehensive Sex-Ed. Without this learning, young women will not know what their choices are when they are pregnant. Although laws in some states have taken control over these rights for women in recent years, it is important to continuously advocate these rights that protect women and their bodies. These reproductive rights include access to birth control and safe/legal abortion care.
-
 
 
                     </p>
