added adv features on my page, did the fade in adv feat and did the same in ravens page. made ravens header show

--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta http-equiv="content-type" content="width=device-width" />
     <link rel="stylesheet" href="learn-more.css" type="text/css" />
     <link rel="stylesheet" href="../utilities.css" type="text/css" />
@@ -36,7 +37,7 @@
         </nav>
     </header>
     <main class="p-0 m-0">
-        <section class="container-fluid p-0">
+        <section class="container-fluid p-0 animate__animated animate__fadeInDown">
             <h1>Contraceptives and Barrier Methods</h1>
         </section>
         <article id="top">It's important for everyone to know what forms of contraceptives, also known as birth control, are available to them. Some methods are more effective at preventing pregnancy, while other methods, known as barriers, are more protective against sexually transmitted diseases (STIs). Below, you'll find some information on all available methods and lifestyles that you should know safely practice sex in a way that's best for you.</article>
