--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../utilities.css" type="text/css" />
     <link rel="stylesheet" href="statistics.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +39,7 @@
         </nav>
     </header>
     <main class="container-fluid p-0 m-0">
-        <section class=" title ">
+        <section class=" title animate__animated animate__fadeInDown">
             <h1>Why is Sex-Ed Important?</h1>
         </section>
 
