--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../utilities.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/21b584a66f.js" crossorigin="anonymous"></script>
-    <title>Comprehensive Sex Ed</title>
+    <title>Contraceptives/Barrier Methods</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../landing-page/index.html">Home</a>
+                            <a class="nav-link" href="../landing-page/copindex.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
