changed href links

--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -16,14 +16,14 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <i class="fa-solid fa-dove dove"></i>
-                <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
+                <a class="navbar-brand" href="../index.html"="true">Comprehensive Sex Education</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../landing-page/copindex.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../statistics/statistics.html">Why Sex Ed?</a>
