--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../utilities.css" type="text/css" />
+    <link rel="stylesheet" href="./utilities.css" type="text/css" />
     <link rel="stylesheet" href="statistics.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -16,14 +16,14 @@
         <nav class="navbar navbar-expand-lg navbar-dark container-fluid nav">
             <div class="container">
                 <i class="fa-solid fa-dove dove fa-2x"></i>
-                <a class="navbar-brand" href="#"="true">Comprehensive Sex Education</a>
+                <a class="navbar-brand" href="../index.html"="true">Comprehensive Sex Education</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../copyindex.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
 
